20070628 menu.h,ui/gtk/gtkjoystick.c: fix menu_options_joysticks_select()'s
	 prototype (Stuart).
20070628 pokefinder/pokefinder.[ch]: make pokefinder_{,im}possible's
	 declarations consistent with their definitions (Stuart).
20070628 ui/gtk/memory.c: fix type of menu_machine_memorybrowser() in its
	 declaration for the GTK+ UI (Stuart).
20070628 ui/gtk/memory.c: fix compilation (Stuart).
20070628 ChangeLog,compat.h,debugger/{breakpoint.c,commandl.l,commandy.y,
	 expression.c},display.c,event.c,hacking/{implementation_notes.txt,
	 input.txt,ui.txt},if1.c,machines/tc2068.c,memory.c,printer.c,
	 spectrum.c,tape.c,ui/xlib/{xdisplay.h,xerror.c},utils.[ch],
	 z80/{coretest.c,z80.c,z80_ops.c}: fix misspellings (Stuart).
20070629 widget/{widget.c,options.pl},ui/options.dat: move
         uidisplay_hotswap_gfx_mode directly to widget_options_finish (more
         from bug #1743318) (Gergely Szasz).
20070630 ui/xlib/{xui.c,xdisplay.c}: allow the use of 3x scalers and add the
         ability for the window to resize itself (more of bug #1686228) (Gergely
         Szasz).
20070630 ui/xlib/xdisplay.c: support more colour depths and more scalers (more
         of bug #1686228) (Gergely Szasz).
20070701 machines/specplus3.c: if we can't figure out the dirty state, only
	 write if requested to do so (Fred).
20070701 disk/plusd.c: add some more information to errors in plusd_disk_insert
         (Fred).
20070701 configure.in,ui/gtk/{gtkkeyboard.c,gtkinternals.h,gtkui.c,stock.c}:
	 remove GTK+ 1.x UI. Outdated, and didn't link.
20070703 utils.c,display.c,fuse.c,compat.h,widget/{filesel.c,error.c},
         sound/sdlsound.c,compat/{getopt.c,getopt1.c},settings.pl,
         ui/sdl/sdlui.c: patches for MorphOS (patch #1746269) (Q-Master).
20070703 fuse.c: clean up #ifdefs (Stuart).
20070704 z80/z80.c: don't page in the +D on startup (fixes bug #1746073)
	 (thanks, Fred) (Stuart).
20070704 z80/coretest.c: remove dead code (Stuart).